# OpenGL_Demo

./: .gitmodules  CMakeLists.txt  README.md
dependencies/glad/: glad.h
src/: config.h  glad.c  linear_algebros.cpp  linear_algebros.h  main.cpp  material.cpp  material.h  triangle_mesh.cpp  triangle_mesh.h
src/shaders/: fragment.txt  vertex.txt
